# CPP-Project-Template

./: .gitignore  CMakeLists.txt
ext/gtest/: CMakeLists.txt
include/: string_transformer.h
main/: main.cc
src/: string_transformer.cc
test/: string_transformer_test.cc  test_main.cc
